# Remote-managment-Server

./: .gitignore  CMakeLists.txt  README.md  certificate.pem  main.cpp  main_server.cpp  server.key  server.pem
data_db/: network.db
server/: server.cpp  server.h
server/crypto/: crypto.cpp  crypto.h
server/db/: mynetdb.cpp  mynetdb.h
